Test/dafny4/git-issue50.dfy.expect
git-issue50.dfy(25,20): Error: Undeclared top-level type or type parameter: T (did you forget to qualify a name or declare a module import 'opened'?)
1 resolution/type errors detected in git-issue50.dfy
